--- a/haihuilai_buyer/Info.plist
+++ b/haihuilai_buyer/Info.plist
@@ -2,8 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSContactsUsageDescription</key>
+	<string>还会来将访问您的通讯录，以方便您邀请车队导游。通讯录仅用于邀请，不会保存资料，也不会用作他用</string>
+	<key>NSCameraUsageDescription</key>
+	<string>请点击“好”以允许访问。若不允许，你将无法拍照上传</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>获取手机日历权限后，才可将订单行程同步至手机日历</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请点击“好”以允许访问。若不允许，你将无法上传照片</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>zh_CN</string>
+	<key>CFBundleDisplayName</key>
+	<string>haihuilai11</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
